--- a/.expeditor/verify_private.pipeline.yml
+++ b/.expeditor/verify_private.pipeline.yml
@@ -4,7 +4,9 @@
 
 env:
   DOCKER_CONFIG: /var/lib/buildkite-agent/.docker
-  HAB_BLDR_CHANNEL: "stable"
+  HAB_BLDR_CHANNEL: "curl8"
+  HAB_STUDIO_SECRET_HAB_BLDR_CHANNEL: "curl8"
+  HAB_FALLBACK_CHANNEL: "stable"
   HAB_STUDIO_SECRET_HAB_FALLBACK_CHANNEL: "stable"
 
 expeditor:
