--- a/components/automate-cluster-ctl/Gemfile
+++ b/components/automate-cluster-ctl/Gemfile
@@ -15,3 +15,8 @@ gem 'mixlib-config'
 gem 'rspec'
 gem 'tomlrb'
 gem 'bcrypt_pbkdf'
+
+if Gem::Version.new(RUBY_VERSION) <= Gem::Version.new("3.1.0")
+  gem "ffi", "< 1.17.0"
+  gem "train-core", "< 3.12.5"
+end
