--- a/components/automate-pg-gateway/habitat/config/haproxy.conf
+++ b/components/automate-pg-gateway/habitat/config/haproxy.conf
@@ -47,15 +47,17 @@ frontend postgresql
 backend automate_postgresql
 {{~#if cfg.service.external_postgresql.enable }}
     balance roundrobin
+    option tcp-check
+    default-server inter 3s fall 3 rise 2 on-marked-down shutdown-sessions
     {{~#each cfg.service.parsed_nodes as |node|}}
         {{~#if node.is_domain}}
             {{~#if ../cfg.resolvers.nameservers }}
-                server-template {{node.address}} 8 {{node.address}}:{{node.port}} check resolvers pgdns init-addr none  resolve-prefer ipv4
+    server-template {{node.address}} 8 {{node.address}}:{{node.port}} check resolvers pgdns init-addr none  resolve-prefer ipv4
             {{else}}
-                server {{node.address}} {{node.address}}:{{node.port}}
+    server {{node.address}} {{node.address}}:{{node.port}} check
             {{~/if}}
        {{else}}
-           server {{node.address}} {{node.address}}:{{node.port}}
+    server {{node.address}} {{node.address}}:{{node.port}} check
        {{~/if}}
     {{~/each}}
 {{else~}}
