pipeline fix automate-cs-nginx
Signed-off-by: SahithiMy <sahithi.mylangam@progress.com>

--- a/components/automate-cs-nginx/habitat/config/chef_https.conf
+++ b/components/automate-cs-nginx/habitat/config/chef_https.conf
@@ -4,8 +4,8 @@
     server_tokens off;
 
     access_log {{cfg.log.access_log_location}} opscode;
-
-    ssl on;
+    listen 443 ssl;
+    #ssl on;
     ssl_certificate {{pkg.svc_config_path}}/service.crt;
     ssl_certificate_key {{pkg.svc_config_path}}/service.key;
     ssl_client_certificate {{pkg.svc_config_path}}/root_ca.crt;
