fix critical services issue on pg follower restart. Directly send data to pg leader from pg-gateway
Signed-off-by: Vivek Shankar <vshankar@progress.com>

--- a/components/automate-pg-gateway/habitat/config/haproxy.conf
+++ b/components/automate-pg-gateway/habitat/config/haproxy.conf
@@ -47,17 +47,18 @@ frontend postgresql
 backend automate_postgresql
 {{~#if cfg.service.external_postgresql.enable }}
     balance roundrobin
-    option tcp-check
+    option httpchk GET /
+    option redispatch
     default-server inter 3s fall 3 rise 2 on-marked-down shutdown-sessions
     {{~#each cfg.service.parsed_nodes as |node|}}
         {{~#if node.is_domain}}
             {{~#if ../cfg.resolvers.nameservers }}
     server-template {{node.address}} 8 {{node.address}}:{{node.port}} check resolvers pgdns init-addr none  resolve-prefer ipv4
             {{else}}
-    server {{node.address}} {{node.address}}:{{node.port}} check
+    server {{node.address}} {{node.address}}:5432 check maxconn 350 check port 6432
             {{~/if}}
        {{else}}
-    server {{node.address}} {{node.address}}:{{node.port}} check
+    server {{node.address}} {{node.address}}:5432 check maxconn 350 check port 6432
        {{~/if}}
     {{~/each}}
 {{else~}}
