--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -2,7 +2,11 @@ env:
   DOCKER_CONFIG: /var/lib/buildkite-agent/.docker
   HAB_BLDR_CHANNEL: "stable"
   HAB_STUDIO_SECRET_HAB_FALLBACK_CHANNEL: "stable"
-
+  # Use the Go module mirror and checksum database by default.
+  # See https://proxy.golang.org for details.
+  GOPROXY: "https://proxy.golang.org,direct"
+  GOSUMDB: "sum.golang.org"
+  
 expeditor:
   defaults:
     executor:
