Go linter modification
Signed-off-by: daveaugustus <pappu.kumar@progress.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,6 +19,8 @@ linters-settings:
       - copylocks
 
 linters:
+  enable:
+    - unused
   enable-all: true
   disable:
     - bodyclose
@@ -73,3 +75,7 @@ linters:
     - nilerr
     - nonamedreturns
     - predeclared
+    - varcheck
+    - ifshort
+    - structcheck
+    - deadcode
