--- a/components/trial-license-service/Makefile
+++ b/components/trial-license-service/Makefile
@@ -2,7 +2,7 @@ include ../../Makefile.common_go
 
 PACKAGE_PATH = github.com/chef/automate/components/trial-license-service
 BINS = ${PACKAGE_PATH}/cmd/trial-license-service
-packages:=${PACKAGE_PATH}/cmd/trial-license-service/...
+packages:=${PACKAGE_PATH}/...
 
 all: lint build test
 
@@ -10,14 +10,14 @@ static: lint
 unit: build test
 
 ${BINS}: bin
-    @echo "GO $@"
-    @go build -o bin/trial-license-service ${GO_LDFLAGS} ${PACKAGE_PATH}/cmd/trial-license-service
+	@echo "GO $@"
+	@cd bin; go build ${GO_LDFLAGS} $@
 
 bin:
-    mkdir -p bin
+	mkdir -p bin
 
 build: ${BINS}
 
 test:
-    @go test -v -cover -count=1 $(packages)
-	
+	@go test -v -i $(packages)
+	@go test -v -cover -count=1 $(packages)
