Dmaddu pipeline fix (#8569)
* GOlang update to version 1.22.0

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* golang v1.22.5

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Modified Go version in all the files

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Pipeline check

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Pipeline check

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Pipeline check

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Pipeline check

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* proto check

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* exported GOPROXY in license_scout

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Compiled protobuf with upgraded Golang v1.22.5

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Downgraded packages

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Protobuf compiles newly added messages and services

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Modified go mod downgrading some dependency for authz errors

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Added GOPROXY

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* GOPROXY

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* GOPROXY

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Downgraded linter

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Go linter modification

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Removed enable unused

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Added buf ignore

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Downgraded protoc-gen-validate

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* package update

Signed-off-by: daveaugustus <pappu.kumar@progress.com>

* Downgraded grpc gateway

Signed-off-by: daveaugustus <pa

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -73,3 +73,10 @@ linters:
     - nilerr
     - nonamedreturns
     - predeclared
+    - protogetter
+    - tagalign
+    - depguard
+    - govet
+    - inamedparam
+    - mnd
+    - perfsprint
