Revert "Dmaddu pipeline fix (#8569)"
This reverts commit 0972d45e6935932b6036a0c1cb1b6af64557106b.

--- a/components/automate-deployment/Makefile
+++ b/components/automate-deployment/Makefile
@@ -77,7 +77,7 @@ ci: clean build unit lint fmt-check
 
 ${BINS}: bin echo-build-data
 	@echo "GO $@"
-	@cd bin; go build $@
+	@cd bin; go build -i ${GO_LDFLAGS} $@
 
 echo-build-data:
 	@echo "build_time: ${BUILD_TIME}"
