--- a/components/automate-cs-nginx/habitat/config/chef_https.conf
+++ b/components/automate-cs-nginx/habitat/config/chef_https.conf
@@ -1,11 +1,11 @@
   server {
-    listen 127.0.0.1:{{cfg.service.port}};
+    listen 127.0.0.1:{{cfg.service.port}} ssl;
 
     server_tokens off;
 
     access_log {{cfg.log.access_log_location}} opscode;
-
-    ssl on;
+    
+    #ssl on;
     ssl_certificate {{pkg.svc_config_path}}/service.crt;
     ssl_certificate_key {{pkg.svc_config_path}}/service.key;
     ssl_client_certificate {{pkg.svc_config_path}}/root_ca.crt;
