fix critical services issue on pg follower restart (#8548)
* fix critical services issue on pg follower restart. Directly send data to pg leader from pg-gateway

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* added health check retry

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* updated working patch health check config for provided services

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* renamed folder

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* review comments

Signed-off-by: punitmundra <pmundra@progress.com>

* fail timout added in es, changes port from 7432 to 5432

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* added log in cs health hook

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* path after upgrade

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* added max conn configurable

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* fix policy

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* fix policy

Signed-off-by: Vivek Shankar <vshankar@progress.com>

* revert pg

Signed-off-by: Vivek Shankar <vshankar@progress.com>

---------

Signed-off-by: Vivek Shankar <vshankar@progress.com>
Signed-off-by: punitmundra <pmundra@progress.com>
Co-authored-by: punitmundra <pmundra@progress.com>

--- a/components/automate-es-gateway/habitat/config/nginx.conf
+++ b/components/automate-es-gateway/habitat/config/nginx.conf
@@ -39,10 +39,10 @@ http {
     # External ES has been specified by a domain name, but no DNS
     # resolvers have been configured. DNS resolution will happen at
     # startup only.
-    server {{endpoint.address}}:{{endpoint.port}} max_fails={{../cfg.ngx.main.max_fails}};
+    server {{endpoint.address}}:{{endpoint.port}} max_fails={{../cfg.ngx.main.max_fails}} fail_timeout={{../cfg.ngx.main.fail_timeout}};
     {{/if ~}}
     {{~else}}
-    server {{endpoint.address}}:{{endpoint.port}} max_fails={{../cfg.ngx.main.max_fails}};
+    server {{endpoint.address}}:{{endpoint.port}} max_fails={{../cfg.ngx.main.max_fails}} fail_timeout={{../cfg.ngx.main.fail_timeout}};
     {{/if ~}}
     {{ ~else }}
     server 127.0.0.1:65535; # force 502
