config bug fix pg-gateway (#8597)
Signed-off-by: Vivek Shankar <vshankar@progress.com>

--- a/components/automate-pg-gateway/habitat/config/haproxy.conf
+++ b/components/automate-pg-gateway/habitat/config/haproxy.conf
@@ -55,10 +55,10 @@ backend automate_postgresql
             {{~#if ../cfg.resolvers.nameservers }}
     server-template {{node.address}} 8 {{node.address}}:{{node.port}} check resolvers pgdns init-addr none  resolve-prefer ipv4
             {{else}}
-    server {{node.address}} {{node.address}}:{{node.port}} maxconn {{cfg.max_connections}} check port 6432
+    server {{node.address}} {{node.address}}:{{node.port}} maxconn {{../cfg.max_connections}} check port 6432
             {{~/if}}
        {{else}}
-    server {{node.address}} {{node.address}}:{{node.port}} maxconn {{cfg.max_connections}} check port 6432
+    server {{node.address}} {{node.address}}:{{node.port}} maxconn {{../cfg.max_connections}} check port 6432
        {{~/if}}
     {{~/each}}
 {{else~}}
