typo fix for certificate template script in Automate HA  (#8616)
* typo fix for certificate error

Signed-off-by: punitmundra <pmundra@progress.com>

* add testcase for semver

Signed-off-by: punitmundra <pmundra@progress.com>

* fix path

Signed-off-by: punitmundra <pmundra@progress.com>

* fix path

Signed-off-by: punitmundra <pmundra@progress.com>

---------

Signed-off-by: punitmundra <pmundra@progress.com>

--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -74,6 +74,8 @@ steps:
       - tfenv use 0.14.11
       - cd terraform/a2ha-terraform
       - make check
+      - cd modules/automate/templates/script/
+      - bash test_semver.sh
     expeditor:
       executor:
         docker:
