--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -338,13 +338,12 @@ http {
 
     location /nginx_status {
       stub_status on;
-      set $x_forwarded_for "{{cfg.nginx.http_include_x_forwarded_for.Value}}";
-      if ($x_forwarded_for = "true") {
+      set $x_forwarded_for "{{../cfg.ngx.http_include_x_forwarded_for}}";
+      {{#if ../cfg.ngx.http.enable_csp_header ~}}
         access_log /var/log/nginx/access.log chef;
-      }
-      else {
+      {{ ~else }}
         access_log off;
-      }
+      {{/if ~}}
       allow 127.0.0.1;
       deny all;
     }
