New version of opensearch in automate (#8670)
* Testing changes

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* Testing changes

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* Adding env in user bin

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* Cleaning the docs correction in integration tests, exclusing system level index

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* fixing pipelines

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* Adding

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* Adding

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* Adding index names in cleanup

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

* Adding correct number of indicies

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

---------

Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>
Co-authored-by: Yashvi Jain <yashvi.jain@progress.com>

--- a/components/automate-opensearch/habitat/config/securityconfig/internal_users.yml
+++ b/components/automate-opensearch/habitat/config/securityconfig/internal_users.yml
@@ -15,6 +15,7 @@ admin:
   reserved: true
   backend_roles:
   - "admin"
+  - "security_rest_api_access"
   description: "Demo admin user"
 
 kibanaserver:
