--- a/components/automate-postgresql/habitat/config/pg_hba.conf
+++ b/components/automate-postgresql/habitat/config/pg_hba.conf
@@ -12,7 +12,7 @@
 local   all             all                                     md5
 
 # TODO: perhaps we could restrict this to just peers in the hab ring
-hostssl all             all             0.0.0.0/0               cert clientcert=1 map=service-map
+hostssl all             all             0.0.0.0/0               cert clientcert=verify-full map=service-map
 
 # Always allow MD5 from localhost
 host    all             all             127.0.0.1/8             md5
