--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -220,27 +220,28 @@ http {
       return 200;
     }
 
-    location ~ /assets/ {
-      return 403;
+
+    location ^~ /assets/$ {
+      return 404;
     }
-    location ~ /assets/img/ {
-      return 403;
+    location ^~ /assets/img/$ {
+      return 404;
     }
-    location ~ /assets/fonts/ {
-      return 403;
+    location ^~ /assets/fonts/$ {
+      return 404;
     }
-    location ~ /assets/chef-ui-library/ {
-      return 403;
+    location ^~ /assets/chef-ui-library/$ {
+      return 404;
     }
 
-    location ~ /dex/ {
-      return 403;
+    location ^~ /dex/$ {
+      return 404;
     }
-    location ~ /dex/static/ {
-      return 403;
+    location ^~ /dex/static/$ {
+      return 404;
     }
-    location ~ /dex/static/img/ {
-      return 403;
+    location ^~ /dex/static/img/$ {
+      return 404;
     }
     #######################################################################
     # Automate Gateway
@@ -360,3 +361,4 @@ http {
   }
   {{/each}}
 }
+
