fixing RE rules.
Signed-off-by: talktovikas <vikas.yadav@progress.com>

--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -221,26 +221,26 @@ http {
     }
 
 
-    location ^~ /assets/$ {
+    location ~ ^/assets/?$ {
       return 404;
     }
-    location ^~ /assets/img/$ {
+    location ~ ^/assets/img/?$ {
       return 404;
     }
-    location ^~ /assets/fonts/$ {
+    location ~ ^/assets/fonts/?$ {
       return 404;
     }
-    location ^~ /assets/chef-ui-library/$ {
+    location ~ ^/assets/chef-ui-library/?$ {
       return 404;
     }
-
-    location ^~ /dex/$ {
+ 
+    location ~ ^/dex/?$ {
       return 404;
     }
-    location ^~ /dex/static/$ {
+    location ~ ^/dex/static/?$ {
       return 404;
     }
-    location ^~ /dex/static/img/$ {
+    location ~ ^/dex/static/img/?$ {
       return 404;
     }
     #######################################################################
