--- a/lib/scaffolding/templates/sqerl.config
+++ b/lib/scaffolding/templates/sqerl.config
@@ -1,7 +1,7 @@
 [{sqerl, [
 {{- if is_external_pg }}
     {{- if eq "password" .Platform.GetPlatform.GetExternalPostgresql.GetAuth.GetScheme.GetValue }}
-           {db_pass, "{{ .Platform.GetPlatform.GetExternalPostgresql.GetAuth.GetPassword.GetDbuser.GetPassword.GetValue }}" },
+           {config_cb, {chef_secrets_sqerl, config, [{<<"userconfig">>, <<"pg_superuser_password">>}]}},
       {{- if .Platform.GetPlatform.GetExternalPostgresql.GetSsl.GetEnable.GetValue }}
            {db_options, [
                       {ssl, true},
