resolving repohealth error
Signed-off-by: swatign <SwatiGanesh.Naik@Progress.com>

--- a/.bldr.toml
+++ b/.bldr.toml
@@ -255,6 +255,7 @@ paths = [
   "lib/authz/*",
   "lib/cereal/*",
   "lib/config/*",
+  "lib/db/*",
   "lib/grpc/*",
   "lib/httputils/*",
   "lib/io/*",
