--- a/components/automate-cli/pkg/testfiles/onprem/config_with_only_db.toml
+++ b/components/automate-cli/pkg/testfiles/onprem/config_with_only_db.toml
@@ -2,6 +2,8 @@
   [global.v1]
     [global.v1.external]
       [global.v1.external.postgresql]
+        enable = true
+        nodes = ["10.11.12.13:5432", "10.11.12.14:5432", "10.11.12.15:5432"]
         [global.v1.external.postgresql.auth]
           [global.v1.external.postgresql.auth.password]
             [global.v1.external.postgresql.auth.password.superuser]
@@ -11,6 +13,8 @@
               username = "admin"
               password = "admin"
       [global.v1.external.opensearch]
+        enable = true
+        nodes = ["https://10.11.12.16:9200", "https://10.11.12.17:9200", "https://10.11.12.18:9200"]
         [global.v1.external.opensearch.auth]
           scheme = "basic_auth"
           [global.v1.external.opensearch.auth.basic_auth]
