--- a/.license_scout.yml
+++ b/.license_scout.yml
@@ -1728,6 +1728,10 @@ exceptions:
     reason: Exception made by Chef Legal
   - name: yallist
     reason: Exception made by Chef Legal
+  - name: sax
+    reason: Exception made by Chef Legal
+  - name: tar
+    reason: Exception made by Chef Legal
 
   golang:
   - name: buf.build/gen/go/bufbuild/bufplugin/connectrpc/go
