Documentation for Support TLS 1.3 ciphers in load balancer configuration (#8973)
* Documentation for Support TLS 1.3 ciphers in load balancer configuration

Signed-off-by: Aishwarya2001A <aaishwar@progress.com>

* changes

Signed-off-by: Aishwarya2001A <aaishwar@progress.com>

* Add license exceptions for nodejs packages

- Add sax, tar, isexe, minimatch, and minipass to nodejs exceptions
- All packages use LPL-1.02 license which requires explicit exception
- Required to fix license scout CI failure

Signed-off-by: Aishwarya2001A <aaishwar@progress.com>

* Increase automate-cli unit test timeout to 45 minutes

- Tests are timing out at 10 minutes
- Increase to 45 minutes to allow completion
- Prevents build cancellation due to timeout

Signed-off-by: Aishwarya2001A <aaishwar@progress.com>

---------

Signed-off-by: Aishwarya2001A <aaishwar@progress.com>

--- a/.license_scout.yml
+++ b/.license_scout.yml
@@ -1728,6 +1728,16 @@ exceptions:
     reason: Exception made by Chef Legal
   - name: yallist
     reason: Exception made by Chef Legal
+  - name: sax
+    reason: Exception made by Chef Legal
+  - name: tar
+    reason: Exception made by Chef Legal
+  - name: isexe
+    reason: Exception made by Chef Legal
+  - name: minimatch
+    reason: Exception made by Chef Legal
+  - name: minipass
+    reason: Exception made by Chef Legal
 
   golang:
   - name: buf.build/gen/go/bufbuild/bufplugin/connectrpc/go
